{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 956,
  "lineage": "f5c057f6-c034-2b9e-c751-a82ad4d41b56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f56279347d2fa43e",
            "arn": "arn:aws:ec2:us-west-1:464992878940:instance/i-01796c4d7eb7a01d6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 2000,
                "kms_key_id": "arn:aws:kms:us-west-1:464992878940:key/77475ba6-9403-4338-95db-4ca520ac0167",
                "volume_id": "vol-062b4528bde471cf5",
                "volume_size": 500,
                "volume_type": "io1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01796c4d7eb7a01d6",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-049bde682795ac6f8",
            "private_dns": "ip-172-31-20-134.us-west-1.compute.internal",
            "private_ip": "172.31.20.134",
            "public_dns": "ec2-13-56-231-232.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.231.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-084724e2bd9ef05a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-egress",
              "default-ping",
              "http-https",
              "kubeadm_master",
              "ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7940a71f",
            "tags": {
              "Batch": "7AM",
              "Location": "California",
              "Name": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b60bd7053733889",
              "sg-0c7e6023e3909ae8c",
              "sg-0d0cf279ceaa5f35f",
              "sg-0d33e97a4be8c99cc",
              "sg-0e237044cb3921df1"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key",
            "aws_security_group.egress-default",
            "aws_security_group.kubeadm_master",
            "aws_security_group.ping-ICMP",
            "aws_security_group.ssh",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f56279347d2fa43e",
            "arn": "arn:aws:ec2:us-west-1:464992878940:instance/i-09484d685ae5b4ab8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 2000,
                "kms_key_id": "arn:aws:kms:us-west-1:464992878940:key/77475ba6-9403-4338-95db-4ca520ac0167",
                "volume_id": "vol-0502e71fd0afb69f6",
                "volume_size": 500,
                "volume_type": "io1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09484d685ae5b4ab8",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06a7c761568c315b4",
            "private_dns": "ip-172-31-30-126.us-west-1.compute.internal",
            "private_ip": "172.31.30.126",
            "public_dns": "ec2-13-56-80-13.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.80.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d89003a6abb7f3ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-egress",
              "default-ping",
              "http-https",
              "kubeadm_worker",
              "ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7940a71f",
            "tags": {
              "Batch": "7AM",
              "Location": "California",
              "Name": "worker-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bf0c5b4e6e143f46",
              "sg-0c7e6023e3909ae8c",
              "sg-0d0cf279ceaa5f35f",
              "sg-0d33e97a4be8c99cc",
              "sg-0e237044cb3921df1"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key",
            "aws_security_group.egress-default",
            "aws_security_group.kubeadm_worker",
            "aws_security_group.ping-ICMP",
            "aws_security_group.ssh",
            "aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f56279347d2fa43e",
            "arn": "arn:aws:ec2:us-west-1:464992878940:instance/i-07ca9ad84a493d5e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 2000,
                "kms_key_id": "arn:aws:kms:us-west-1:464992878940:key/77475ba6-9403-4338-95db-4ca520ac0167",
                "volume_id": "vol-09ef3d1c75b938d9b",
                "volume_size": 500,
                "volume_type": "io1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ca9ad84a493d5e4",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d52476643d73f837",
            "private_dns": "ip-172-31-27-37.us-west-1.compute.internal",
            "private_ip": "172.31.27.37",
            "public_dns": "ec2-54-151-114-210.us-west-1.compute.amazonaws.com",
            "public_ip": "54.151.114.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-032e15fb6cbb58202",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-egress",
              "default-ping",
              "http-https",
              "kubeadm_worker",
              "ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7940a71f",
            "tags": {
              "Batch": "7AM",
              "Location": "California",
              "Name": "worker-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bf0c5b4e6e143f46",
              "sg-0c7e6023e3909ae8c",
              "sg-0d0cf279ceaa5f35f",
              "sg-0d33e97a4be8c99cc",
              "sg-0e237044cb3921df1"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key",
            "aws_security_group.egress-default",
            "aws_security_group.kubeadm_worker",
            "aws_security_group.ping-ICMP",
            "aws_security_group.ssh",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:464992878940:security-group/sg-0c7e6023e3909ae8c",
            "description": "Default security group that allows inbound and outbound traffic from all instances in the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7e6023e3909ae8c",
            "ingress": [],
            "name": "default-egress",
            "name_prefix": null,
            "owner_id": "464992878940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "egress-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-baad99dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:464992878940:security-group/sg-0df733582d47af6a5",
            "description": "Exposes port 5000 for flask webserver",
            "egress": [],
            "id": "sg-0df733582d47af6a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "flask_server",
            "name_prefix": null,
            "owner_id": "464992878940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask_server"
            },
            "timeouts": null,
            "vpc_id": "vpc-baad99dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubeadm_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:464992878940:security-group/sg-05b60bd7053733889",
            "description": "Exposes ports for the kubeadm master node",
            "egress": [],
            "id": "sg-05b60bd7053733889",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10252
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "kubeadm_master",
            "name_prefix": null,
            "owner_id": "464992878940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubeadm_master"
            },
            "timeouts": null,
            "vpc_id": "vpc-baad99dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubeadm_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:464992878940:security-group/sg-0bf0c5b4e6e143f46",
            "description": "Exposes ports for a kubeadm worker node",
            "egress": [],
            "id": "sg-0bf0c5b4e6e143f46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "kubeadm_worker",
            "name_prefix": null,
            "owner_id": "464992878940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubeadm_worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-baad99dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ping-ICMP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:464992878940:security-group/sg-0d33e97a4be8c99cc",
            "description": "Default security group that allows to ping the instance",
            "egress": [],
            "id": "sg-0d33e97a4be8c99cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "default-ping",
            "name_prefix": null,
            "owner_id": "464992878940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ping-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-baad99dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:464992878940:security-group/sg-0d0cf279ceaa5f35f",
            "description": "Security group for nat instances that allows SSH and VPN traffic from internet",
            "egress": [],
            "id": "sg-0d0cf279ceaa5f35f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": null,
            "owner_id": "464992878940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-baad99dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:464992878940:security-group/sg-0e237044cb3921df1",
            "description": "Security group for web that allows web traffic from internet",
            "egress": [],
            "id": "sg-0e237044cb3921df1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-https",
            "name_prefix": null,
            "owner_id": "464992878940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http-https"
            },
            "timeouts": null,
            "vpc_id": "vpc-baad99dd"
          }
        }
      ]
    }
  ]
}